2003-01-21  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/diapsft2renderer.c (set_font): Adjust silly random factor
	for change in font.c

	* lib/widgets.c: Avoid warning when font menu file doesn't exist.

	* lib/font.c (dia_font_build_layout): Let's all use the same weird
	factor here.

	* app/lineprops_area.c (dia_arrow_chooser_dialog_show): 
	* app/layer_dialog.c (create_layer_dialog) 
	(layer_dialog_edit_layer): 
	* app/filedlg.c (file_open_callback, file_save_as_callback) 
	(file_export_callback): 
	* app/dia-props.c (create_diagram_properties_dialog): 
	* app/defaults.c (defaults_dialog_destroyed): 
	* app/color_area.c (color_area_edit): Dialog destroy event handling.

2003-01-19  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/defaults.c (defaults_dialog_destroyed): Reset cache when
	defaults dialog destroyed.

2003-01-19  Steffen Macke <sdteffen@web.de>

	* objects/makefile.msc: added bondgraph
	* plug-ins/makefile.msc: added GDK_PIXBUF_LIBS in order
	to compile pixbuf.dll
	* makefile.msc: copying all objects and dlls now
	
2003-01-19  Hans Breuer  <hans@breuer.org>

	* app/diagram.[hc] : provide dia_open_diagrams(), make
	open_diagrams variable static
	* app/dia.def : export it (to be used by PyDia)
	* app/app_procs.c app/autosave.c app/diagram_tree_window.c
	  app/display.c app/dynamic_refresh.c app/layer_dialog.c
	  app/load_save.c : make use of dia_open_diagrams()

	* app/interface.c : don't set GDK_WINDOW_TYPE_HINT_TOOLBAR
	on win32. It removes the diagram window from the taskbar and
	shrinks it's window title to toolbar style (newest gtk2.2 cvs)

	* app/menus.c : add '...' to menu entries where a dialog 
	gets invoked
	* app/recent_files.c app/dia_embedd.c : reflect the above in 
	menus_get_item_from_path() calls

	* lib/libdia.def : add dia_image_rgba_data

	* lib/properties.h lib/prop_text.[hc] : add new property
	type StringList
	* objects/UML/class.[hc] object/UML/class_dialog.c : use
	StringList for attributes_strings and operations_strings to