@@ -1,5 +1,8 @@
 2003-01-21  Lars Clausen  <lrclause@cs.uiuc.edu>
 
+	* app/layer_dialog.c (create_layer_dialog): Correct handling of
+	destroy_event. 
+
 	* app/diapsft2renderer.c (set_font): Adjust silly random factor
 	for change in font.c
 
